--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -32,7 +32,7 @@
 
             <tr>
               <td><h6><%= t('global.serialnum') %></h6></td>
-              <td><%= @entry.serialnum %></td>
+              <td class="monospace"><%= @entry.serialnum %></td>
             </tr>
             <tr>
               <td><h6><%= t('entry.show.sent') %></h6></td>
