--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,9 @@
     <link rel="apple-touch-icon" sizes="72x72" href="<%= image_path('logo-small.png') %>" />
     <link rel="apple-touch-icon" sizes="144x144" href="<%= image_path('logo-small.png') %>" />
 
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab&text=Badger' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:300' rel='stylesheet' type='text/css'>
 
     <%= stylesheet_link_tag "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
