--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -13,6 +13,7 @@
     border-radius: 6px;
   }
   .landing-heading {
+    font-family: $font-family-title;
     color: $black;
     text-align: center;
     margin-bottom: 15px;
