--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -93,10 +93,10 @@
                   </tr>
                   <% entries.each do |entry| %>
                     <tr>
-                      <td><%= entry.company.abb + entry.type.appliance.abb + entry.number.to_s %></td>
-                      <td><%= entry.type.appliance.name %></td>
-                      <td><%= entry.type.brand %></td>
-                      <td><%= entry.type.typenum %></td>
+                      <td><%= entry.company.abb + entry.apptype.appliance.abb + entry.number.to_s %></td>
+                      <td><%= entry.apptype.appliance.name %></td>
+                      <td><%= entry.apptype.brand %></td>
+                      <td><%= entry.apptype.typenum %></td>
                       <td class="monospace"><%= entry.serialnum %></td>
                       <% if entry.scrap == 1 %>
                         <td><span class="glyphicon glyphicon-trash"></span></td>
