--- a/app/views/stocks/type_stock.html.erb
+++ b/app/views/stocks/type_stock.html.erb
@@ -42,7 +42,7 @@
                 <% end %>
                 <% if can? :destroy, Stock %>
                   <td>
-                    <%= link_to(type_stock_remove_path(params[:company_id], params[:type_id], stock), :data => { :confirm => t('global.sure') }, :method => :delete) do %>
+                    <%= link_to(type_stock_remove_path(params[:company_id], params[:apptype_id], stock), :data => { :confirm => t('global.sure') }, :method => :delete) do %>
                       <span class="glyphicon glyphicon-remove"></span>
                     <% end %>
                   </td>
@@ -57,7 +57,7 @@
   <div class="panel-footer">
 
     <% if can? :create, Stock %>
-      <%= link_to(t('stock.index.add_stock'), type_stock_index_path(params[:company_id], params[:type_id]), :class => 'btn btn-mini btn-primary') %>
+      <%= link_to(t('stock.index.add_stock'), type_stock_index_path(params[:company_id], params[:apptype_id]), :class => 'btn btn-mini btn-primary') %>
     <% end %>
 
   </div>
