--- a/app/views/stocks/type_stock_index.html.erb
+++ b/app/views/stocks/type_stock_index.html.erb
@@ -29,7 +29,7 @@
                 <td><%= stock.minimum %></td>
                 <td><%= stock.send_mail == 1 ? t('global.y') : t('global.n') %></td>
                 <td>
-                  <%= link_to(t('global.add'), type_stock_add_path(params[:company_id], params[:type_id], stock.id), :class => 'btn btn-primary btn-xs') %>
+                  <%= link_to(t('global.add'), type_stock_add_path(params[:company_id], params[:apptype_id], stock.id), :class => 'btn btn-primary btn-xs') %>
                 </td>
               </tr>
             <% end %>
@@ -44,7 +44,7 @@
       <%= paginate @stocks %>
     <% end %>
 
-    <%= link_to(t('global.back'), type_stock_path(params[:company_id], params[:type_id]), :class => 'btn btn-mini btn-primary') %>
+    <%= link_to(t('global.back'), type_stock_path(params[:company_id], params[:apptype_id]), :class => 'btn btn-mini btn-primary') %>
 
   </div>
 </div>
