fixed supplier views, and a number of assorted issues

--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -42,4 +42,8 @@
       }
     }    
   }
+  // Make help blocks more obvious, as people can't seem to read.
+  .help-block {
+    color: $brand-danger;
+  }
 }
