--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -50,7 +50,7 @@
   }
   // /navigation name/company label styled like an anchor
   .info-label {
-    color: $gray-lighter;
+    color: $white;
     margin: 0 !important;
     padding: 15px 0;
     padding-left: 15px;
