--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -2,9 +2,9 @@
 
 <div class="hero-unit center">
   <% if params[:type] == 'extended' %>
-    <%= link_to(t('stats.index.simpler'), company_shipment_stats_path(@shipment, @company), :class => 'btn btn-primary btn-index stat-toggle') %>
+    <%= link_to(t('stats.index.simpler'), company_shipment_stats_path(@company, @shipment), :class => 'btn btn-primary btn-index stat-toggle') %>
   <% else %>
-    <%= link_to(t('stats.index.fancier'), company_shipment_stats_path(@shipment, @company, type: 'extended'), :class => 'btn btn-primary btn-index stat-toggle') %>
+    <%= link_to(t('stats.index.fancier'), company_shipment_stats_path(@company, @shipment, type: 'extended'), :class => 'btn btn-primary btn-index stat-toggle') %>
   <% end %>
         <div class="panel-group" id="accordion">
   <% @charts.each_pair do |key, array| %>
