added chosen.js for dropdowns

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,6 +26,9 @@
 @import "landing";
 @import "footer";
 
+// Chosen.js dropdown styling
+@import "plugins/bootstrap-chosen";
+
 body {
   padding-top: 60px; // Bootstrap navbar
   color: $black;
