--- a/app/views/repairs/index.html.erb
+++ b/app/views/repairs/index.html.erb
@@ -28,7 +28,7 @@
                 <td><%= repair.number %></td>
                 <td><%= repair.brand %></td>
                 <td><%= repair.type_number %></td>
-                <td><%= repair.serial_number %></td>
+                <td class="monospace"><%= repair.serial_number %></td>
                 <td><%= repair.get_status %></td>
                 <td><%= repair.priority%></td>
                 <td>
