--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -16,6 +16,12 @@
 
       <%= f.text_field :postal_code %>
       <%= f.text_field :house_number %>
+
+      <div class="form-group">
+        <span class="btn btn-mini btn-primary" id="btn-lookup">Lookup</span>
+        <span id="lookup-response"></span>
+      </div>
+
       <%= f.text_field :street %>
       <%= f.text_field :city %>
     </div>
