--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,10 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:300' rel='stylesheet' type='text/css'>
 
+    <% if controller_name == 'clients' and (action_name == 'new' or action_name == 'edit') %>
+      <script src="https://maps.googleapis.com/maps/api/js?libraries=geometry&v=3.exp&sensor=false&region=NL"></script>
+    <% end %>
+
     <%= stylesheet_link_tag "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
