--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,8 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:300' rel='stylesheet' type='text/css'>
 
-    <% if controller_name == 'clients' and (action_name == 'new' or action_name == 'edit') %>
-      <script src="https://maps.googleapis.com/maps/api/js?libraries=geometry&v=3.exp&sensor=false&region=NL"></script>
+    <% if controller_name == 'clients' and (['new','edit','update'].include? action_name) %>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=geometry&v=3.exp&sensor=false&region=NL"></script>
     <% end %>
 
     <%= stylesheet_link_tag "application", :media => "all" %>
