last fix to lookup, all is good now

--- a/app/assets/javascripts/controllers/clients_controller.js.erb
+++ b/app/assets/javascripts/controllers/clients_controller.js.erb
@@ -4,7 +4,13 @@ app.controller({
       "new": function() {
         addPostalListener();
       },
+      "create": function() {
+        addPostalListener();
+      },
       "edit": function() {
+        addPostalListener();
+      },
+      "update": function() {
         addPostalListener();
       }
     }
