basic print layout

--- a/app/views/repairs/edit.html.erb
+++ b/app/views/repairs/edit.html.erb
@@ -34,6 +34,8 @@
       <%= f.text_field :after_repair_iris_code %>
       <%= f.text_field :solution %>
 
+      <%= f.text_field :costs %>
+
       <%= f.text_area :note %>
     </div>
     <div class="panel-footer">
