--- a/app/views/repairs/show.html.erb
+++ b/app/views/repairs/show.html.erb
@@ -91,6 +91,11 @@
             </tr>
 
             <tr>
+              <td><h6>Costs ex. VAT</h6></td>
+              <td><%= @repair.costs %></td>
+            </tr>
+
+            <tr>
               <td><h6>Note</h6></td>
               <td><%= @repair.note %></td>
             </tr>       
