--- a/app/views/repairs/print.html.erb
+++ b/app/views/repairs/print.html.erb
@@ -130,8 +130,8 @@
           <td class="right">: €<%= @costs[:vat] %></td>
         </tr>
         <tr>
-          <td class="left">Kosten inc. BTW</td>
-          <td class="right">: €<%= @costs[:full] %></td>
+          <td class="left"><b>Kosten inc. BTW</b></td>
+          <td class="right"><b>: €<%= @costs[:full] %></b></td>
         </tr>
       </tbody>
     </table>
