--- a/app/views/repairs/print.html.erb
+++ b/app/views/repairs/print.html.erb
@@ -130,7 +130,7 @@
           <td class="right">: €<%= @costs[:vat] %></td>
         </tr>
         <tr>
-          <td class="left"><b>Kosten inc. BTW</b></td>
+          <td class="left"><b>Kosten incl. BTW</b></td>
           <td class="right"><b>: €<%= @costs[:full] %></b></td>
         </tr>
       </tbody>
