--- a/app/views/repairs/show.html.erb
+++ b/app/views/repairs/show.html.erb
@@ -91,8 +91,13 @@
             </tr>
 
             <tr>
-              <td><h6>Costs ex. VAT</h6></td>
+              <td><h6>Labour Costs</h6></td>
               <td><%= @repair.costs %></td>
+            </tr>
+
+            <tr>
+              <td><h6>Material Costs</h6></td>
+              <td><%= @repair.costs_secondary %></td>
             </tr>
 
             <tr>
