--- a/app/views/repairs/new.html.erb
+++ b/app/views/repairs/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Fix - New repair') %>
 
-<%= bootstrap_form_for(@repair, :url => client_repairs_path(@client), :html => { :class => 'form-horizontal', :multipart => true }, style: :horizontal, left: "col-sm-2", right: "col-sm-4", help: :block) do |f| %>
+<%= bootstrap_form_for(@repair, :url => client_repairs_path(params[:client_id]), :html => { :class => 'form-horizontal', :multipart => true }, style: :horizontal, left: "col-sm-2", right: "col-sm-4", help: :block) do |f| %>
   <%= f.alert_message t('global.errors') %>
   
   <div class="panel panel-default">
@@ -44,5 +44,3 @@
     </div>
   </div>
 <% end %>
-
-<%= link_to t('global.back'), client_repairs_path(@client) %>
